--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.0",
+    "axios": "^0.23.0",
+    "date-fns": "^2.25.0",
     "expo": "~43.0.0",
+    "expo-font": "~10.0.3",
+    "expo-location": "^13.0.4",
     "expo-status-bar": "~1.1.0",
+    "moment": "^2.29.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
